--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mocha": "^9.1.3"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^4.4.1"
+    "@openzeppelin/contracts": "^4.4.1",
+    "dotenv": "^14.2.0"
   }
 }
